# RicordiArchiveOMR

./: .gitignore  .gitmodules  Confusion_Matrix_Annotation.ipynb  Create_Dataset.ipynb  Create_Dataset_result.ipynb  OMR_Binary.ipynb  OMR_Multiclass.ipynb  README.md  __annotator.json  __control.json.xz  config.toml  exploring_blob_detection.ipynb  preprocess.sh  pyproject.toml  staffline.patch  staffline.yml  staffline_requirements.txt
omr/: check.py  image_manager.py  preprocess.py  server.py
