[project]
name = "OMR - Archivio Ricordi"
version = ""
description = ""
authors = [
    {name = "Federico Simonetta", email = "federico.simonetta@unimi.it"},
]
dependencies = [
    "scikit-image>=0.19.1",
    "joblib>=1.1.0",
    "toml>=0.10.2",
    "scikit-learn>=1.0.2",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
homepage = ""

[project.optional-dependencies]
[tool]

[tool.pdm]

[tool.pdm.scripts]
preprocess = {call = "omr.preprocess:main('config.toml')"}

[tool.pdm.dev-dependencies]
ipython = [
    "ipdb>=0.13.9",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
